2013-11-22  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.9 release procedure:
 	Changes since nco-4_3_8: nces, XML
	cd ~/nco;cvs tag -d nco-4_3_9;cvs tag -d nco-4_3_9-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.9 release"
	cvs tag -c nco-4_3_9;cvs tag -c nco-4_3_9-1

	* XML mode add precise multi-dimensional NC_CHAR warnings when dbg_lbl > 0

	* XML mode change default and backup string separator to "*" and "*|*" respectively
	NB: Buggy NcML toolsui breaks on long separators like "foobar"

	* XML mode add ugly shape="" attribute to scalars for fuller NcML compliance

2013-11-21  Charlie Zender  <zender@uci.edu>

	* XML mode ensure string variables and attributes do not contain string separator

2013-11-20  Charlie Zender  <zender@uci.edu>

	* XML mode never print blank (underscore) for missing values

	* Workaround NcML limitations on uint64 types by removing
	max(uint64) values from input CDL files other than buggy.cdl

2013-11-19  Charlie Zender  <zender@uci.edu>

	* XML mode print non-whitespace separators for 1D character array attributes

	* XML mode print non-whitespace separators for scalar strings for brain-dead programs

2013-11-18  Charlie Zender  <zender@uci.edu>

	* Neaten XML indentation

	* Add more backwards-incompatible members to buggy.cdl

	* XML mode use stub-name not full name in group name element

2013-11-16  Charlie Zender  <zender@uci.edu>

	* Omit XML default _FillValue when variable already has _FillValue

	* Eliminate all quotes from <values> elements

	* XML mode add default _FillValue attribute for unsigned variable types

	* XML mode add _Unsigned attribute for unsigned variable types

	* XML mode use xml_typ_nm() instead of cdl_typ_nm()

2013-11-15 Pedro Vicente  <pvicente@uci.edu>

	* nces: Regression #3 file ensemble with GPE

2013-11-15  Charlie Zender  <zender@uci.edu>

	* Add XML non-whitespace separator to multi-dimensional NC_CHAR variables

2013-11-13  Charlie Zender  <zender@uci.edu>
